--- a/src/ui/common/Button.pug
+++ b/src/ui/common/Button.pug
@@ -77,7 +77,7 @@ style.
 		&.button-with-icon-plus::before
 			color var(--c-text-weak)
 			content '+'
-			left -17px
+			left -2ch
 			position absolute
 	.button-badge
 		border-radius 10px
