--- a/src/ui/feature/dashboard/DashboardPage.pug
+++ b/src/ui/feature/dashboard/DashboardPage.pug
@@ -40,7 +40,7 @@ script.
 		localStorage['watchlist'] = watchlist.join(' ')
 		editing_watchlist = false
 
-	getContext('set_theme_color')()
+	getContext('set_theme_colors')()
 
 nav#subreddit-search
 	TextInput(key='/' label='Search:')
