--- a/src/ui/feature/post/PostFlair.pug
+++ b/src/ui/feature/post/PostFlair.pug
@@ -20,6 +20,7 @@ span.post-flair(style="background-color: {color || 'white'}; color: {(new Color(
 
 style.
 	.post-flair
+		border 1px solid var(--c-text-faint)
 		border-radius 10px
 		display inline-block
 		font-size 13px
