--- a/src/ui/feature/feed/FeedImprint.pug
+++ b/src/ui/feature/feed/FeedImprint.pug
@@ -15,9 +15,9 @@ script.
 	
 	error = null
 	info = null
-	set_theme_color = getContext('set_theme_color')
+	set_theme_colors = getContext('set_theme_colors')
 	if feed_type != 'subreddit'
-		set_theme_color()
+		set_theme_colors()
 	switch feed_type
 		when 'collection'
 			api.loadWatch(api.ID('collection', collection_short_id), (x) ->
@@ -30,7 +30,7 @@ script.
 		when 'subreddit'
 			api.loadWatch(api.ID('subreddit', subreddit_name), (x) ->
 				{ data: info, error } = x
-				set_theme_color(info?.primary_color || info?.key_color)
+				set_theme_colors(info?.primary_color, info?.key_color)
 			)
 		when 'user'
 			api.loadWatch(api.ID('user', user_name), (x) ->
