--- a/src/ui/feature/feed/FeedPostList.pug
+++ b/src/ui/feature/feed/FeedPostList.pug
@@ -60,6 +60,9 @@ script.
 nav.feed-posts
 	{#if feed_type !== 'collection'}
 		FeedPostListControls(feed_type={feed_type} multireddit_name={multireddit_name} subreddit_name={subreddit_name} user_name={user_name} search_query={search_query} sort={sort} time_range={time_range})
+	menu.feed-post-list-actions
+		Button(key='w' link={format_url({ collection_short_id, feed_search_query: search_query, feed_sort: sort, feed_time_range: time_range, feed_type: feed_type, multireddit_name, post_short_id: selected_post_short_id, subreddit_name, user_name })} text='Previous')
+		Button(key='s' link={format_url({ collection_short_id, feed_search_query: search_query, feed_sort: sort, feed_time_range: time_range, feed_type: feed_type, multireddit_name, post_short_id: selected_post_short_id, subreddit_name, user_name })} text='Next')
 	ol.feed-post-list
 		{#each pages as page}
 			{#if page.error}
@@ -74,6 +77,11 @@ nav.feed-posts
 
 style.
 	.feed-posts
+		display flex
+		flex-flow column nowrap
+		gap 1em
+		width 320px
+	.feed-post-list
 		display flex
 		flex-flow column nowrap
 		gap 1em
