--- a/src/ui/feature/post/PostComment.pug
+++ b/src/ui/feature/post/PostComment.pug
@@ -1,6 +1,7 @@
 script.
 	import { getContext } from 'svelte'
 	import api from '../../../api/index.js'
+	import { Time } from '../../../lib/index.js'
 	
 	import Button from '../../common/Button.pug'
 	import FormattedHTML from '../../common/FormattedHTML.pug'
@@ -25,10 +26,10 @@ script.
 	li(class={out_of_context ? 'comment-clip' : 'comment-tree'})
 		<!-- 'comment' role is draft status and not recognized yet -->
 		<!-- svelte-ignore a11y-unknown-role -->
-		article.comment(class:comment-deleted={(comment.author === '[deleted]' && comment.body[0] === '[') || comment.removal_reason} class:comment-downvoted={comment.likes === false} class:comment-highlighted={short_id === focus_comment_short_id} class:comment-upvoted={comment.likes === true} class:comment-with-hidden-score={comment.score_hidden} class:comment-with-low-score={comment.score < 1} data-likes={comment.likes} data-radial-menu='comment' data-short_id={short_id} role='comment')
-			UserByline(distinguish={comment.distinguished || (comment.is_submitter && 'submitter')} flair_rich_text={comment.author_flair_richtext} flair_text={comment.author_flair_text} name={comment.author})
+		article.comment(class:comment-deleted={(comment.author === '[deleted]' && comment.body[0] === '[') || comment.removal_reason} class:comment-downvoted={comment.likes === false} class:comment-highlighted={short_id === focus_comment_short_id} class:comment-upvoted={comment.likes === true} class:comment-with-hidden-score={comment.score_hidden} class:comment-with-low-score={comment.score < 1} data-likes={comment.likes} data-radial-menu='comment' data-short_id={short_id} role='comment' title={comment.edited ? Time.sToAbsRelTimeStr(comment.created_utc) + ' (edited ' + Time.sToAbsRelTimeStr(comment.edited) + ')' : Time.sToAbsRelTimeStr(comment.created_utc)})
+			UserByline(distinguish={comment.distinguished || (comment.is_submitter && 'submitter')} flair_color={comment.author_flair_background_color} flair_rich_text={comment.author_flair_richtext} flair_text={comment.author_flair_text} name={comment.author})
+			button.comment-score(on:mousedown={() => api.submit(api.ID('comment_vote', short_id), { numerical_vote: comment.likes ? 0 : 1 })}) {comment.score_hidden ? '?' : comment.score}
 			FormattedHTML(html={comment.body_html})
-			button.comment-score(on:mousedown={() => api.submit(api.ID('comment_vote', short_id), { numerical_vote: comment.likes ? 0 : 1 })}) {comment.score}
 		{#if out_of_context}
 			cite.comment-source-info
 				a(href='/r/{comment.subreddit}') in r/{comment.subreddit}
@@ -46,13 +47,9 @@ script.
 						Button(link='/r/{comment.subreddit}/post/{comment.link_id.slice(3)}/comment/{short_id}' text='Continue thread...')
 
 style.
-	.comment-score
-		color var(--c-text-weak)
-		position absolute
-		right calc(100% + 1em)
 	.comment
 		display inline-block
-		margin 0.25em 0
+		margin 0.666em 0
 		max-width 480px
 		position relative
 	:global(.comment > .md)
@@ -70,10 +67,15 @@ style.
 	.comment-clip
 		display flex
 	.comment-more-replies
-		padding 0.25em 0
+		padding 0.5em 0
 	.comment-replies
 		border-left 1px solid var(--c-blend-normal)
-		padding-left 39px
+		padding-left 2em
+	.comment-score
+		background var(--c-theme)
+		color var(--c-text-weak)
+		position absolute
+		right calc(100% + 2ch)
 	.comment-source-info
 		display flex
 		flex-flow column nowrap
