--- a/src/ui/feature/user/UserFlair.pug
+++ b/src/ui/feature/user/UserFlair.pug
@@ -1,11 +1,18 @@
 script.
 	import { Color } from '../../../lib/index.js'
 
+	export color = null
 	export emoji_style = null
 	export rich_text = null
 	export text = null
+	if !color then color = '#ffffff' # TODO
+	text_color =
+		if color
+			if (new Color({ hex: color }))?.isDark() then 'white' else 'black'
+		else
+			'inherit'
 
-span.user-flair(title={text})
+span.user-flair(class:user-flair-colored={color !== null} style="background: {color}; color: {text_color}" title={text})
 	{#if rich_text && rich_text.length}
 		{#each rich_text as segment}
 			{#if segment.e === 'text'}
@@ -21,10 +28,14 @@ span.user-flair(title={text})
 style.
 	.user-flair
 		display inline-flex
-		gap 6px
+		overflow hidden
+		white-space pre
+		&.user-flair-colored
+			border-radius 3px
+			padding 0 6px
 	.user-flair-emoji
 		border-radius 3px
 		display inline-block
 		height 16px
 		&:hover
-			transform scale(3)
+			transform scale(4)
